--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Y2KID TYPE</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="styles.css">
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 </head>
